# instruments_visualizer

./: CMakeLists.txt  README.md  backgroundsub.py  package.xml
config/: manometer_visualizer.yaml  painel_visualizer.yaml  ros.yaml  valve_visualizer.yaml
include/AnalogMeterDetector/: analog_meter_detector.h
include/CircleDetector/: circle_detector.h
include/PainelDetector/: painel_detector.h
include/ValveDetector/: valve_detector.h
launch/: instuments_visualizer.launch
lib/CvWorks/: CvWorks.pro  CvWorks.pro.user.58e7d68  Makefile
lib/CvWorks/Components/: Components.pro  Makefile
lib/CvWorks/Components/VisionImplementationCv/: ARTagDetectorBLP.cpp  ARTagDetectorBLP.h  CircleDetectorHTCF.cpp  CircleDetectorHTCF.h  CircleTrackerHTCF.cpp  CircleTrackerHTCF.h  ColorBlobDetectorHF.cpp  ColorBlobDetectorHF.h  CvImageGUI.cpp  CvImageGUI.h  DatasetFDDB.cpp  DatasetFDDB.h  FeatureTrackerKLTCv.cpp  FeatureTrackerKLTCv.h  FrameServerCv.cpp  FrameServerCv.h  LineDetectorHT.cpp  LineDetectorHT.h  Makefile  MultiObjectTrackerCCCv.cpp  MultiObjectTrackerCCCv.h  ObjectDetectorCCCv.cpp  ObjectDetectorCCCv.h  ObjectDetectorFMCv.cpp  ObjectDetectorFMCv.h  ObjectTrackerCCCv.cpp  ObjectTrackerCCCv.h  ObjectTrackerKLT.cpp  ObjectTrackerKLT.h  ObjectTrackerPFHist.cpp  ObjectTrackerPFHist.h  TemplMatchingDetector.cpp  TemplMatchingDetector.h  TemplMatchingTracker.cpp  TemplMatchingTracker.h  VisionHelperCv.h  VisionImplementationCv.h  VisionImplementationCv.pro  VisionImplementationCv.pro.user.c8e8024.3.3-pre1
lib/CvWorks/Components/VisionSensors/: AnalogMeterDetectorCLT.cpp  AnalogMeterDetectorCLT.h  AnalogMeterTrackerPC.cpp  AnalogMeterTrackerPC.h  DiffractionLevelTracker.cpp  DiffractionLevelTracker.h  KalmanWrap.h  LevelTracker.cpp  LevelTracker.h  LevelTrackerAuto.cpp  LevelTrackerAuto.h  LuminanceWrap.h  Makefile  MovementWrap.h  PresenceTracker.cpp  PresenceTracker.h  TemperatureTrackerTCam.cpp  TemperatureTrackerTCam.h  TemperatureTrackerThermo.cpp  TemperatureTrackerThermo.h  VisionSensors.h  VisionSensors.pro
lib/CvWorks/Components/VisionWidgets/: DetectorControl.h  FrameServerControlWidget.cpp  FrameServerControlWidget.h  FrameServerControlWidget.ui  ImageViewerCv.cpp  ImageViewerCv.h  ImageViewerCv.ui  Makefile  ProcessControl.cpp  ProcessControl.h  ProcessWidget.cpp  ProcessWidget.h  ProcessWidget.ui  TrackerControl.h  VisionWidgets.cpp  VisionWidgets.h  VisionWidgets.pro  moc_FrameServerControlWidget.cpp  moc_ImageViewerCv.cpp  moc_ProcessWidget.cpp  moc_predefs.h  ui_FrameServerControlWidget.h  ui_ImageViewerCv.h  ui_ProcessWidget.h
lib/CvWorks/Core/: Core.pro  Makefile
lib/CvWorks/Core/FieldVision/: FieldVision.pro  FieldVisionCore.h  Makefile
lib/CvWorks/Core/Vision/: Makefile  Vision.pro  VisionAbstractions.h  VisionAsync.h  VisionCore.h  (+4 more)
msg/: CircuitState.msg  ManometerState.msg  PainelState.msg  ValveState.msg
src/: manometer_visualizer_node.cpp  painel_visualizer_node.cpp  valve_visualizer_node.cpp
src/AnalogMeterDetector/: analog_meter_detector.cpp
src/CircleDetector/: circle_detector.cpp
src/PainelDetector/: painel_detector.cpp
src/ValveDetector/: valve_detector.cpp
srv/: VisualizeCircuit.srv  VisualizeManometer.srv  VisualizePainel.srv  VisualizeValve.srv
(+11 files in other folders)
